--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.13.0",
+    "ra-input-rich-text": "^3.12.0",
     "react": "^17.0.1",
     "react-admin": "^3.13.0",
     "react-dom": "^17.0.1",
