--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "jalali-moment": "^3.3.10",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.13.0",
     "ra-input-rich-text": "^3.12.0",
     "react": "^17.0.1",
     "react-admin": "^3.13.0",
+    "react-admin-date-inputs": "^1.1.4",
+    "react-advance-jalaali-datepicker": "^1.2.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "redux-form": "^8.3.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
